# officium-rs

./: .gitignore  Cargo.toml  HISTORY.md  LICENSE  README.md  build.rs
.github/workflows/: pages.yml  regression.yml
data/: build_canonization.py  build_horas_json.py  build_missa_json.py  build_ordo_json.py  build_sancti_json.py  canonization_dates.json  compression_bench.py  kalendaria_1962.json  kalendaria_by_rubric.json  missa_latin.json  ordo_latin.json  psalms_latin.json  sancti.json  tempora_redirects_1570.txt  transfer_combined.txt  translation_en.json
demo/: app.js  breviary.html  breviary.js  calendar.html  calendar.js  index.html  ordo.js  render.js
docs/: BREVIARY_PORT_PLAN.md  BREVIARY_PORT_SCOPE.md  BREVIARY_REGRESSION_RESULTS.md  BUNDLE_BUDGET.md  CLUSTER_PROGRESS.md  COMPRESSION_BENCH.md  DIVINUM_OFFICIUM_PORT_PLAN.md  HARDCODE_AUDIT.md  MASS_PORT_LESSONS.md  NEXT_SESSION_BREVIARY.md  PERL_INPROC_PLAN.md  REGRESSION_RESIDUALS.md  REGRESSION_RESULTS.md  SUPER_PLAN.md  UPSTREAM_WEIRDNESSES.md
docs/sweep-data/: README.md  breviary_100y.sh  breviary_100y_partial.csv
scripts/: .gitignore  aggregate_sweep.py  cluster_extract.py  cluster_verify.sh  divinum-officium.pin  do_render.sh  perl_getweek_year.pl  persistent_driver.pl  setup-divinum-officium.sh
src/: core.rs  corpus.rs  data_types.rs  date.rs  embed.rs  horas.rs  kalendaria.rs  kalendaria_layers.rs  kalendarium_1570.rs  lib.rs  mass.rs  missa.rs  mod.rs  occurrence.rs  ordo.rs  perl_cache.rs  perl_driver.rs  prayers.rs  precedence.rs  precedence_legacy.rs  reform.rs  regression.rs  sancti.rs  scrub.rs  setupstring.rs  tempora_table.rs  transfer_table.rs  translation.rs  wasm.rs
src/breviary/: altovadum.rs  antetpsalm.rs  canticum.rs  capitulum.rs  concurrence.rs  corpus.rs  dirge.rs  gettempora.rs  horas.rs  hymnus.rs  martyrologium.rs  mod.rs  monastic.rs  oratio.rs  papal.rs  postprocess.rs  preces.rs  prima.rs  proprium.rs  psalter.rs  setheadline.rs  specials.rs  suffragium.rs  triduum.rs
src/breviary/matins/: hymnus.rs  initiarule.rs  invitatorium.rs  lectiones.rs  mod.rs  nocturn.rs  psalmody.rs  responsory.rs
