[package]
name = "officium-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Divinum Officium rubric core in pure Rust — calendar, occurrence, precedence, and mass-propers resolver across Tridentine 1570 → Rubrics 1960."
repository = "https://github.com/fschutt/officium-rs"
homepage = "https://fschutt.github.io/officium-rs/"
keywords = ["liturgy", "calendar", "latin", "rubrics"]
categories = ["text-processing"]
readme = "README.md"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["regression"]
# Native-only Rust↔Perl regression harness. Pulls in the Perl source
# as a git submodule (vendor/divinum-officium/) and shells out to
# `perl5` to render reference HTML for diff. Hard-gated to non-WASM
# targets — see compile_error! at the top of src/regression.rs.
# Pulls in serde_json for the manifest writer.
regression = ["dep:serde_json", "dep:rayon"]
# wasm-bindgen surface (browser/Node). Use with
# `cargo build --target wasm32-unknown-unknown --release --features wasm
# --no-default-features` or wasm-pack.
wasm = ["dep:wasm-bindgen"]

[dependencies]
serde = { version = "1", features = ["derive"] }
# postcard is the runtime decoder for our embedded corpus. Built from
# the source JSON by `build.rs` at compile time and shipped as
# OUT_DIR/*.postcard.br files (postcard, then brotli-compressed); lib
# reads via `include_bytes!` and decompresses on first access.
# Pure-rust, `no_std`-friendly, much smaller than serde_json at runtime.
postcard = { version = "1", default-features = false, features = ["alloc"] }
# Pure-rust brotli decompressor for the precompressed corpus. Brotli
# beats gzip ~2× on our metadata-heavy files (kalendaria_by_rubric:
# 18.9 KB gzip → 11.6 KB brotli) and ~1.7× on missa_latin (872 KB
# gzip → 506 KB brotli). The decompress-only crate `brotli-decompressor`
# is smaller than the full `brotli` crate.
# `std` feature pulls in `Decompressor` (the `Read`-based API);
# without it we'd need to use the lower-level `BrotliDecompress`
# directly. Both work in WASM via std.
brotli-decompressor = { version = "5", default-features = false, features = ["std"] }
# serde_json is gated behind `regression` — only the regression
# harness + native binaries write JSON manifests. Lib runtime path
# uses postcard exclusively, so WASM bundles drop this dep entirely.
serde_json = { version = "1", optional = true }
# Native-only data-parallelism for the year-sweep / office-sweep
# harnesses. Each day is independent — Rust render is pure, Perl is
# a fresh subprocess — so a 4-core CI runner gets ~4× speedup on the
# Perl-bound regression matrix at zero correctness risk. Gated to
# `regression` so WASM bundles drop it.
rayon = { version = "1", optional = true }
unicode-normalization = "0.1"
# Pinned to match the installed wasm-bindgen-cli version. Bump in
# lockstep with the CI tooling (`wasm-bindgen-cli --version`).
wasm-bindgen = { version = "=0.2.92", optional = true }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
# build.rs reads `data/*.json` (serde_json), encodes as postcard,
# compresses with brotli, writes `OUT_DIR/*.postcard.br`. Lib runtime
# only needs postcard + brotli-decompressor.
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }
brotli = "8"

[profile.release]
opt-level = "z"   # optimize for size on wasm; minor pessimization on native, acceptable
lto = true
codegen-units = 1

[[bin]]
name = "year-sweep"
path = "src/bin/year_sweep.rs"
required-features = ["regression"]

[[bin]]
name = "year-kalendar"
path = "src/bin/year_kalendar.rs"

[[bin]]
name = "getweek-check"
path = "src/bin/getweek_check.rs"

[[bin]]
name = "debug-prelude"
path = "src/bin/debug_prelude.rs"
required-features = ["regression"]
